initial commit for open source sample architecture

--- a/SampleArchitecture/appsettings.json
+++ b/SampleArchitecture/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Token": "test"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=TestArch;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
